# opentelemetry-network

./: .clang-format  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmodules  .release-please-manifest.json  CHANGELOG.md  CMakeLists.txt  Cargo.toml  NOTICE.txt  README.md  RELEASING.md  clang-format.sh  config.h.cmake_in  contributing.md  frontmatter.json  release-please-config.json  version.sh
.github/: CODEOWNERS  (+1 more)
build-tools/: CMakeLists.txt  NOTICE.txt  README.md  add_dependency.sh  build.sh  build_directory.sh  check_missing.sh  get_tag.sh  nproc.sh
build-tools/.github/: CODEOWNERS
build-tools/aws_sdk/: Dockerfile
build-tools/base/: Dockerfile
build-tools/bcc/: Dockerfile
build-tools/cpp_misc/: Dockerfile
build-tools/final/: Dockerfile  NOTICE.txt
build-tools/gcp_cpp/: Dockerfile
build-tools/go/: Dockerfile
build-tools/libbpf/: Dockerfile
build-tools/libmaxminddb/: Dockerfile
build-tools/libuv/: Dockerfile
build-tools/opentelemetry/: Dockerfile
channel/: CMakeLists.txt  buffered_writer.cc  buffered_writer.h  buffered_writer_test.cc  callbacks.h  channel.h  component.h  connection_caretaker.cc  connection_caretaker.h  double_write_channel.cc  double_write_channel.h  file_channel.cc  file_channel.h  ibuffered_writer.h  lz4_channel.cc  lz4_channel.h  mock_channel.h  network_channel.h  reconnecting_channel.cc  reconnecting_channel.h  stringstream_channel.cc  stringstream_channel.h  tcp_channel.cc  tcp_channel.h  test_channel.cc  test_channel.h  tls_channel.cc  tls_channel.h  tls_error.cc  tls_error.h  tls_handler.cc  tls_handler.h  tls_over_tcp_channel.cc  tls_over_tcp_channel.h  upstream_connection.cc  upstream_connection.h
channel/internal/: certificate.cc  certificate.h  private_key.cc  private_key.h  ssl_context.cc  ssl_context.h  tls_shim.cc  tls_shim.h
collector/: CMakeLists.txt  Dockerfile.k8s-collector  agent_log.h  auth_method.h  component.h  constants.h  server_command.h
collector/aws/: CMakeLists.txt  Dockerfile  README.md  collector.cc  collector.h  entrypoint.sh  enumerator.cc  enumerator.h  ingest_connection.cc  ingest_connection.h  main.cc
collector/cloud/: CMakeLists.txt  Dockerfile  README.md  collector.cc  collector.h  entrypoint.cc  entrypoint.sh  enumerator.cc  enumerator.h  ingest_connection.cc  ingest_connection.h  main.cc
collector/k8s/: CMakeLists.txt  Dockerfile  collector.proto  entrypoint.cc  entrypoint.sh  go.mod  go.sum  kubernetes_info.proto  kubernetes_owner_kind.cc  kubernetes_owner_kind.h  kubernetes_rpc_server.cc  kubernetes_rpc_server.h  main.cc  resync_channel.cc  resync_channel.h  resync_processor.cc  resync_processor.h  resync_queue.cc  resync_queue.h  resync_queue_interface.h
collector/kernel/: CMakeLists.txt  Dockerfile  bpf_handler.cc  bpf_handler.h  bpf_preprocess.py  buffered_poller.cc  buffered_poller.h  cargo_build_rust.cmake  cgroup_handler.cc  cgroup_handler.h  cgroup_handler_test.cc  cgroup_prober.cc  cgroup_prober.h  dns_requests.cc  dns_requests.h  entrypoint-kct.sh  entrypoint.cc  entrypoint.sh  entrypoint_error.h  fd_reader.cc  fd_reader.h  hostport_tuple.h  kernel_blacklist.h  kernel_collector.cc  kernel_collector.h  kernel_collector_restarter.cc  kernel_collector_restarter.h  kernel_collector_test.cc  kernel_headers.sh  kernel_symbols.cc  kernel_symbols.h  kernel_symbols_test.cc  main.cc  nat_handler.cc  nat_handler.h  nat_prober.cc  nat_prober.h  nic_poller.cc  nic_poller.h  perf_poller.cc  (+24 more)
config/: CMakeLists.txt  config_file.cc  config_file.h  http_proxy_config.cc  http_proxy_config.h  intake_config.cc  intake_config.h
crates/k8s-collector-bin/: Cargo.toml
jitbuf/: CMakeLists.txt  descriptor.h  descriptor_reader.cc  descriptor_reader.h  element_queue_jlog_factory.cc  element_queue_jlog_factory.h  fixed_handler.c  fixed_handler.h  handler.cc  handler.h  id_mapping.cc  id_mapping.h  jb.h  jitbuf_clear_macros.h  jlog.h  jtrace.h  perfect_hash.h  service.h  static_assert.h  transform_builder.cc  transform_builder.h  transformer.cc  transformer.h
otlp/: CMakeLists.txt  otlp_emitter.cc  otlp_emitter.h  otlp_grpc_client.h  otlp_grpc_client_test.cc  otlp_grpc_logs_client.cc  otlp_grpc_logs_client.h  otlp_grpc_metrics_client.cc  otlp_grpc_metrics_client.h  otlp_request_builder.cc  otlp_request_builder.h  otlp_test_server.h  otlp_util.h  test_grpc_server.h
reducer/: CMakeLists.txt  Dockerfile  constants.h  constants.inl  copy_metrics.h  core.cc  core.h  core_base.h  core_base.inl  core_type.h  disabled_metrics.cc  disabled_metrics.h  disabled_metrics_test.cc  dns_cache.h  entrypoint.cc  entrypoint.h  entrypoint.sh  health_check.sh  internal_metrics_encoder.h  internal_stats.h  json_formatter.cc  json_formatter.h  latency_accumulator.h  latency_accumulator.inl  load_balancer.h  main.cc  metric_info.cc  metric_info.h  null_publisher.cc  null_publisher.h  otlp_grpc_formatter.cc  otlp_grpc_formatter.h  otlp_grpc_formatter_test.cc  otlp_grpc_publisher.cc  otlp_grpc_publisher.h  outbound_metrics.h  outbound_stats.h  prometheus_formatter.cc  prometheus_formatter.h  prometheus_handler.cc  (+26 more)
render/: CMakeLists.txt  ebpf_net.render  flowmill.render  npm.render
renderc/: .gitignore  CMakeLists.txt  build.gradle  settings.gradle  src
scheduling/: CMakeLists.txt  interval_scheduler.cc  interval_scheduler.h  job.h  timer.cc  timer.h
tools/: CMakeLists.txt  aggregation_wire_to_json.cc  bpf_wire_to_json.cc  error_lookup.cc  intake_wire_to_json.cc  matching_wire_to_json.cc
util/: CMakeLists.txt  LRU.h  agent_id.cc  agent_id.h  args_parser.cc  args_parser.h  args_parser.inl  authz_fetcher.cc  authz_fetcher.h  authz_token.cc  authz_token.h  aws_instance_metadata.cc  aws_instance_metadata.h  base64.cc  base64.h  base64_test.cc  bits.h  bits_test.cc  boot_time.c  boot_time.h  buffer.h  cgroup_parser.cc  cgroup_parser.h  cgroup_parser_test.cc  circular_queue.h  circular_queue_cpp.h  code_timing.cc  code_timing.h  common_test.h  container_of.h  counter.h  counter.inl  counter_test.cc  counter_to_rate.h  counter_to_rate.inl  counter_to_rate_test.cc  curl_engine.cc  curl_engine.h  debug.h  defer.h  (+124 more)
(+593 files in other folders)
