[workspace]
members = [
  "crates/kernel-collector-sys",
  "crates/kernel-collector-bin",
  "crates/reducer-sys",
  "crates/reducer-bin",
  "crates/cloud-collector-sys",
  "crates/cloud-collector-bin",
  "crates/k8s-relay-sys",
  "crates/k8s-relay-bin",
  "crates/reducer",
  "crates/perfect_hash_map",
  "crates/render_parser",
  "crates/otlp_export",
  "crates/element-queue",
  "crates/timeslot",
]

[workspace.dependencies]
render_parser = { path = "crates/render_parser" }
otlp_export = { path = "crates/otlp_export" }
reducer = { path = "crates/reducer" }
reducer-sys = { path = "crates/reducer-sys" }
